Make images unselectable - is_private handling

--- a/src/InstaViewer/InstaThumbs/InstaThumbs.module.css
+++ b/src/InstaViewer/InstaThumbs/InstaThumbs.module.css
@@ -9,6 +9,9 @@
 .Thumbnail {
     height: 60px;
     width: 60px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .Active {
