--- a/src/InstaViewer/InstaHeader/InstaHeader.module.css
+++ b/src/InstaViewer/InstaHeader/InstaHeader.module.css
@@ -9,9 +9,13 @@
 }
 
 .Profile {
-    height: 100%;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
     border: 1px solid #e6e6e6;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .Info {
