--- a/src/InstaViewer/InstaViewer.module.css
+++ b/src/InstaViewer/InstaViewer.module.css
@@ -11,8 +11,19 @@
     margin: 0;
 }
 
+.Private {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 60%;
+}
+
 @media (max-width: 420px) {
     .InstaViewer {
         width: 100%;
+        border-width: 2px 0px;
     }
+
 }
