add spinner and adjust media queries

--- a/src/InstaViewer/InstaImage/InstaImage.module.css
+++ b/src/InstaViewer/InstaImage/InstaImage.module.css
@@ -10,3 +10,9 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
+@media (max-width: 320px) {
+    .InstaImage {
+        height: 320px;
+    }
+}
